--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <Section class="middle-section">
 
         <div class="works-section">
-            <div>
+            <div class="works-section-title">
                 <h1>My Recent Works</h1>
                 <img src="./Icons/Indicator.svg" alt="">
             </div>
