--- a/index.html
+++ b/index.html
@@ -61,139 +61,135 @@
         </div>
     </section>
 
-    <Section class="middle-section">
-
-        <div class="works-section">
-            <div class="works-section-title">
-                <h1>My Recent Works</h1>
-                <img src="./Icons/Indicator.svg" alt="">
-            </div>
-
-            <div class="works-grid-container">
-                <div style="background-color: lightblue;">
-                    <img src="./Icons/Img-Plaholder.svg" alt="img">
-                    <div>
-                        <h1>Multi-Post-Stories <br>
-                        Gain &#43; Glory</h1>
-                        <ul>
-                            <li>Ruby on Rails</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>HTML</li>
-                        </ul>
-                        <button>See project</button>
-                    </div>
-                </div>
-
-                <div style="background-color: rgb(241, 30, 58);">
-                    <img src="./Icons/Img-Plaholder.svg" alt="img">
-                    <div>
-                        <h1>Multi-Post-Stories <br>
-                        Gain &#43; Glory</h1>
-                        <ul>
-                            <li>Ruby on Rails</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>HTML</li>
-                        </ul>
-                        <button>See project</button>
-                    </div>
-                </div>
-
-                <div style="background-color: lightblue;">
-                    <img src="./Icons/Img-Plaholder.svg" alt="img">
-                    <div>
-                        <h1>Multi-Post-Stories <br>
-                        Gain &#43; Glory</h1>
-                        <ul>
-                            <li>Ruby on Rails</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>HTML</li>
-                        </ul>
-                        <button>See project</button>
-                    </div>
-                </div>
-
-                <div style="background-color: rgb(241, 30, 58);">
-                    <img src="./Icons/Img-Plaholder.svg" alt="img">
-                    <div>
-                        <h1>Multi-Post-Stories <br>
-                        Gain &#43; Glory</h1>
-                        <ul>
-                            <li>Ruby on Rails</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>HTML</li>
-                        </ul>
-                        <button>See project</button>
-                    </div>
-                </div>
-
-                <div style="background-color: rgb(24, 27, 194);">
-                    <img src="./Icons/Img-Plaholder.svg" alt="img">
-                    <div>
-                        <h1>Multi-Post-Stories <br>
-                        Gain &#43; Glory</h1>
-                        <ul>
-                            <li>Ruby on Rails</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>HTML</li>
-                        </ul>
-                        <button>See project</button>
-                    </div>
-                </div>
-
-            </div>
-
+    <section class="work-section">
+        <div class="works-section-title">
+            <h2>My Recent Works</h2>
+            <img src="./Icons/Indicator.svg" alt="">
         </div>
-        
-        <div class="about-me">
-            <div class="about-me">
-                <h1>About me</h1>
-                <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-                    don’t hesitate to contact me.</p>
-                <button>Get my resume</button>
-            </div>
-            <div class="about-me-grid">
-                <div>
-                    <img src="./Icons/Icon-Langguage.svg" alt="img">
-                    <h3>Languages</h3>
-                    <ul>
-                        <li>Javascript</li>
-                        <li>Ruby</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                    </ul>
-                </div>
 
-                <div>
-                    <img src="./Icons/Icon-name.svg" alt="img">
-                    <h3>Frameworks</h3>
-                    <ul>
-                        <li>React.js</li>
+        <div class="works-grid-container">
+            <div class="card flex column">
+                <img src="./Icons/Card/card_bg.png" alt="img">
+                <div class="card-details flex column">
+                    <h2>Multi-Post-Stories</h2>
+                    <h3>Gain &#43; Glory</h3>
+                    <ul class="flex">
                         <li>Ruby on Rails</li>
-                        <li>RSpec</li>
-                        <li>Capybara</li>
-                        <li>selenium</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>HTML</li>
                     </ul>
+                    <button type="button">See project</button>
                 </div>
+            </div>
 
-                <div>
-                    <img src="./Icons/Icon-skill.svg" alt="img">
-                    <h3>Skills</h3>
-                    <ul>
-                        <li>Database Management</li>
-                        <li>Version Control</li>
-                        <li>CLI</li>
-                        <li>Web Development</li>
-                        <li>API Design</li>
+            <div class="card flex column">
+                <img src="./Icons/Card/card_bg.png" alt="img">
+                <div class="card-details flex column">
+                    <h2>Multi-Post-Stories</h2>
+                    <h3>Gain &#43; Glory</h3>
+                    <ul class="flex">
+                        <li>Ruby on Rails</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>HTML</li>
                     </ul>
+                    <button type="button">See project</button>
+                </div>
+            </div>
+
+            <div class="card flex column">
+                <img src="./Icons/Card/card_bg.png" alt="img">
+                <div class="card-details flex column">
+                    <h2>Multi-Post-Stories<h2>
+                    <h3>Gain &#43; Glory</h3>
+                    <ul class="flex">
+                        <li>Ruby on Rails</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>HTML</li>
+                    </ul>
+                    <button type="button">See project</button>
+                </div>
+            </div>
+
+            <div class="card flex column">
+                <img src="./Icons/Card/card_bg.png" alt="img">
+                <div class="card-details flex column">
+                    <h2>Multi-Post-Stories <h2>
+                    <h3>Gain &#43; Glory</h3>
+                    <ul class="flex">
+                        <li>Ruby on Rails</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>HTML</li>
+                    </ul>
+                    <button type="button">See project</button>
+                </div>
+            </div>
+
+            <div class="card flex column">
+                <img src="./Icons/Card/card_bg.png" alt="img">
+                <div class="card-details flex column">
+                    <h2>Multi-Post-Stories <h2>
+                    <h3>Gain &#43; Glory</h3>
+                    <ul class="flex">
+                        <li>Ruby on Rails</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>HTML</li>
+                    </ul>
+                    <button type="button">See project</button>
                 </div>
             </div>
 
         </div>
-    </Section>
+    </section>
+    
+    <section class="about-section">
+        <div class="about-me">
+            <h1>About me</h1>
+            <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                don’t hesitate to contact me.</p>
+            <button>Get my resume</button>
+        </div>
+        <div class="about-me-grid">
+            <div>
+                <img src="./Icons/Icon-Langguage.svg" alt="img">
+                <h3>Languages</h3>
+                <ul>
+                    <li>Javascript</li>
+                    <li>Ruby</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
+            </div>
+
+            <div>
+                <img src="./Icons/Icon-name.svg" alt="img">
+                <h3>Frameworks</h3>
+                <ul>
+                    <li>React.js</li>
+                    <li>Ruby on Rails</li>
+                    <li>RSpec</li>
+                    <li>Capybara</li>
+                    <li>selenium</li>
+                </ul>
+            </div>
+
+            <div>
+                <img src="./Icons/Icon-skill.svg" alt="img">
+                <h3>Skills</h3>
+                <ul>
+                    <li>Database Management</li>
+                    <li>Version Control</li>
+                    <li>CLI</li>
+                    <li>Web Development</li>
+                    <li>API Design</li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
