--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="card-details flex column">
                     <h2>Multi-Post-Stories</h2>
                     <h3>Gain &#43; Glory</h3>
-                    <ul class="flex">
+                     <ul class="list flex">
                         <li>Ruby on Rails</li>
                         <li>CSS</li>
                         <li>Javascript</li>
@@ -88,7 +88,7 @@
                 <div class="card-details flex column">
                     <h2>Multi-Post-Stories</h2>
                     <h3>Gain &#43; Glory</h3>
-                    <ul class="flex">
+                     <ul class="list flex">
                         <li>Ruby on Rails</li>
                         <li>CSS</li>
                         <li>Javascript</li>
@@ -101,9 +101,9 @@
             <div class="card flex column">
                 <img src="./Icons/Card/card_bg.png" alt="img">
                 <div class="card-details flex column">
-                    <h2>Multi-Post-Stories<h2>
+                    <h2>Multi-Post-Stories</h2>
                     <h3>Gain &#43; Glory</h3>
-                    <ul class="flex">
+                     <ul class="list flex">
                         <li>Ruby on Rails</li>
                         <li>CSS</li>
                         <li>Javascript</li>
@@ -116,9 +116,9 @@
             <div class="card flex column">
                 <img src="./Icons/Card/card_bg.png" alt="img">
                 <div class="card-details flex column">
-                    <h2>Multi-Post-Stories <h2>
+                    <h2>Multi-Post-Stories </h2>
                     <h3>Gain &#43; Glory</h3>
-                    <ul class="flex">
+                     <ul class="list flex">
                         <li>Ruby on Rails</li>
                         <li>CSS</li>
                         <li>Javascript</li>
@@ -131,9 +131,9 @@
             <div class="card flex column">
                 <img src="./Icons/Card/card_bg.png" alt="img">
                 <div class="card-details flex column">
-                    <h2>Multi-Post-Stories <h2>
+                    <h2>Multi-Post-Stories </h2>
                     <h3>Gain &#43; Glory</h3>
-                    <ul class="flex">
+                     <ul class="list flex">
                         <li>Ruby on Rails</li>
                         <li>CSS</li>
                         <li>Javascript</li>
@@ -147,17 +147,17 @@
     </section>
     
     <section class="about-section">
-        <div class="about-me">
-            <h1>About me</h1>
+        <div class="about-me flex">
+            <h2>About me</h2>
             <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don’t hesitate to contact me.</p>
-            <button>Get my resume</button>
+            <button type="button">Get my resume</button>
         </div>
         <div class="about-me-grid">
-            <div>
-                <img src="./Icons/Icon-Langguage.svg" alt="img">
+            <div class="about-me-grid-item flex column">
+                <img src="./Icons/Icon-Langguage.svg" class="iconic" alt="img">
                 <h3>Languages</h3>
-                <ul>
+                 <ul class="list skills flex">
                     <li>Javascript</li>
                     <li>Ruby</li>
                     <li>HTML</li>
@@ -165,10 +165,10 @@
                 </ul>
             </div>
 
-            <div>
-                <img src="./Icons/Icon-name.svg" alt="img">
+            <div class="about-me-grid-item flex column">
+                <img src="./Icons/Icon-name.svg" class="iconic" alt="img">
                 <h3>Frameworks</h3>
-                <ul>
+                 <ul class="list skills flex">
                     <li>React.js</li>
                     <li>Ruby on Rails</li>
                     <li>RSpec</li>
@@ -177,10 +177,10 @@
                 </ul>
             </div>
 
-            <div>
-                <img src="./Icons/Icon-skill.svg" alt="img">
+            <div class="about-me-grid-item flex column">
+                <img src="./Icons/Icon-skill.svg" class="iconic" alt="img">
                 <h3>Skills</h3>
-                <ul>
+                 <ul class="list skills flex">
                     <li>Database Management</li>
                     <li>Version Control</li>
                     <li>CLI</li>
